Move setup code to app.py, decouple db and calculations logic
